--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Gefahren durch Sturzflutereignisse konkret zu identifizieren - und Maßnahmen un
           
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <a href="/brunn/post/03vorgehen/" class="db grow">
-            <img src="https://leanbase.de/uploads/4pd92997apf4adyy9qmymdm4939aaswkbs4sx4ts.jpg" class="img" alt="image from Methodik">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Methodik_5-Schritt-Methode.png" class="img" alt="image from Methodik">
           </a>
         </div>
       
